--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs15-tailwind-v4-starter",
+  "name": "travel2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.17",
+    "framer-motion": "^12.7.1",
     "next": "^15.0.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
